[package]
name = "grout"
version = "0.8.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
config = { version = "0.14.0", default-features=false, features = ['toml'] }
dirs = "5.0"
lazy_static = "1.4"
regex = "1.10"
ron = "0.8"
serde = { version = "1.0", features = ['derive'] }

[dependencies.windows]
version = "0.56"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]
